# price-tracker

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  reset_db.cmd
backend/: Cargo.toml  Dockerfile.prod
backend/migrations/: 20260701135450_add_product_info.sql  20260704104738_remove_reference_quantity.sql  20260704180134_extend_product.sql
backend/src/: adapters.rs  db.rs  main.rs  product.rs
backend/src/adapters/interspar/: fetcher.rs  structure.rs
backend/src/adapters/spar/: fetcher.rs  structure.rs
backend/src/product/: price_reference.rs  tag.rs  vendor.rs
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Footer.tsx  ProductCard.tsx  main.tsx  types.ts
migrations/: 20260630225532_create_products_table.sql  20260701135450_add_product_info.sql
src/: adapters.rs  client.rs  db.rs  fetcher.rs  main.rs  product.rs
src/adapters/: spar.rs
src/adapters/spar/: fetcher.rs  structure.rs
src/product/: price_reference.rs  tag.rs  vendor.rs
