[package]
name = "products"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "postgres",
    "macros"
] }
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"
reqwest = "0.13"
axum = "0.8"
